show service account status and expiry in ui (#2992)
